--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;600&display=swap" rel="stylesheet">
     <title>Homepage</title>
 </head>
 <body>
@@ -186,9 +186,39 @@
 </div>
 
 
-
+<!-- this div is for the rounded corner box -->
 <div id="border_box">
-    <div id="imageSvg"></div>
+    
+  
+</div>
+
+<div class="main-headings">
+
+  <div class="main_heading_box">
+    <div class="heading_text">
+      <div>
+        <p id="first_head">
+          The subscription management platform that enabled Slidebean to slide into 30+ countries.
+        </p>
+      </div>
+      <div>
+        <p>
+          Chargebee is the subscription billing and revenue management platform that lets you solve for your today, and scale for your tomorrow.
+        </p>
+      </div>
+      <div>
+        <button id="demo_btn" >Get a Demo</button>
+        <button id="sign-up-btn" > sign up for free</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="main_heading_box">
+    <div class="off_img_box">
+      <img src="https://webstatic.chargebee.com/assets/web/543/images/home/coc/customers/jose-bolanos.png" alt="">
+    </div>
+  </div>
+  
 </div>
 </body>
 </html>
