complete customer page

--- a/fp03_086_day2.html
+++ b/fp03_086_day2.html
@@ -99,15 +99,27 @@
             display: grid;
             width: 80%;
             grid-template-columns: repeat(2,1fr);
-            grid-template-rows: repeat(10,250px);
+            grid-template-rows: repeat(5,140px);
             margin: auto;
             margin-top: 50px;
-            gap: 20px;
-            border: 1px solid red;
+            gap: 50px;
+            /* border: 1px solid red; */
         }
         #block>div{
-            border: 1px solid red;
-            border-radius: 10px;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            /* border: 1px solid red; */
+            border-radius: 5px;
+        }
+        #block>div>img{
+            width: 50%;
+            margin-left: 20px;
+            margin-top: 10px;
+        }
+        #block>div>h2{
+            margin-left: 20px;
+            margin-top: 10px;
+            font-size: medium;
+            color: rgb(71, 68, 68);
         }
     </style>
 </head>
@@ -165,26 +177,46 @@
         </div>
     </div>
     <div id="block">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/4KQMyH8cjSCpej40xWnVtP/24a9b5586ff08545c627722f44b4a925/ss_logo_blue.svg" alt="">
+            <h2>How SyncSPider made offline and online payments possible for theirs customers with Chargebee =></h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/6yKwwWw5YJV1utZd1s5Csi/64977da12343df28d31b6f4fd5844a28/Let-s_Talk_Interactive-logo.png" alt="">
+            <h2>How Let’s Talk Interactive Unleashed Scale with an Accelerated Quote-to-Cash Cycle</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/1uAlrh0KGiORBrlK8DEgi8/709bd192fd1e622d87696b0825f29a94/Refocus-logo.png" alt="">
+            <h2>How Refocus Closed Deals 2X Faster by Connecting HubSpot with Chargebee</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/5rQOlwAzI5yq3EMDem7ONr/d3e02a4918490b0956e2f6a0a0a2e407/Sendinblue-logo.png" alt="">
+            <h2>Serving 300K Active Users across 180 countries: The 'Sendinblue' Phenomenon</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/6Pnnx8CmE2qE8gYjwrZKLP/983716251828f2eadd01c852f4e764c3/Jeune_Afrique-logo.png" alt="">
+            <h2>How Jeune Afrique Rapidly Expanded to New Geographies With 10X Faster Time-To-Market</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/PqRaNiIAeF1HVRap2kQLr/fedb83c0091fc7a6c7a14d570e6a34ff/Powtoon-logo.png" alt="">
+            <h2>How Chargebee Powered a 63% Save Rate Lift for Powtoon</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/7tmqeS4YprL5vB2Dl7au09/9b3c6530fe5a638b9c1feeb1ebdc8647/Drake_Software-logo.png" alt="">
+            <h2>Switching to GAAP and reimagining the revenue recognition process: The Drake Software story</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/6QGdqstkUp9ay2gi4BKYu7/8f2dec71597399c32dc53c892b891fa4/Unbounce-logo.png" alt="">
+            <h2>A better cancel experience to engage and delight customers at Unbounce</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/2a3Afd7k1PCGjJZO3w7KS0/81b2958e306d1ec1d05b29148ad34086/TouchNote-logo.png" alt="">
+            <h2>How TouchNote Defended Against Cancellations & Increased Save Rate by 56%</h2>
+        </div>
+        <div>
+            <img src="https://images.ctfassets.net/a7hvy8sclsq6/3cTmYSA4SnkP8eX6v4wwQv/cc884339d4b83da83338a240a2d77f20/ClickFunnels-logo.png" alt="">
+            <h2>ClickFunnels retains 230% more customers with Chargebee</h2>
+        </div>
     </div>
 </body>
 </html>
