product page last part

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="https://kit.fontawesome.com/9a460dffa9.js" crossorigin="anonymous"></script>
     <title>Homepage</title>
 </head>
         
 <div id="main_nav_tab">
     <div class="logo_box">
         <a href="./index.html">
-            <img src="./images/chargify_logo.png" alt="">
+            <img src="./images/chargify transparent logo.png" alt="">
         </a>
     </div>
 
@@ -209,8 +210,8 @@
         </p>
       </div>
       <div>
-        <button id="demo_btn" >Get a Demo</button>
-        <button id="sign-up-btn" > sign up for free</button>
+        <button id="demo_btn" >Get a Demo <i class="fa fa-arrow-right" aria-hidden="true"></i> </button>
+        <button id="sign-up-btn" > sign up for free <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
   </div>
