day-4 work done

--- a/sidebar.html
+++ b/sidebar.html
@@ -112,10 +112,23 @@
                     <div></div>
                 </div>
                 <div id="buttons_home">
-                    <button id="daily" onclick="daily()" >Daily</button>
+                    <button id="daily" onclick="daily()">Daily</button>
                     <button id="month_3" onclick="month_3()">3 Months</button>
                     <button id="month_6" onclick="month_6()">6 Months</button>
                     <button id="month_12" onclick="month_12()">12 Months</button>
+                </div>
+
+                <div class="graph">
+                    <img src="./images/graph_1.png" alt="">
+                    <img src="./images/graph_2.png" alt="">
+                    <img src="./images/graph_3.png" alt="">
+                    <img src="./images/graph_4.png" alt="">
+                    <img src="./images/graph_5.png" alt="">
+                    <img src="./images/graph_6.png" alt="">
+                    <img src="./images/graph_7.png" alt="">
+                    <img src="./images/graph_8.png" alt="">
+                    <img src="./images/graph_9.png" alt="">
+                    <img src="./images/graph_10.png" alt="">
                 </div>
             </div>
 </body>
