--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/permissible-step-1626/styles/demo.css">
+    <link rel="stylesheet" href="/styles/demo.css">
 </head>
 <body>
     <div id="chargebee_logo">
