customers page done day-5

--- a/sidebar.html
+++ b/sidebar.html
@@ -20,7 +20,7 @@
         <div id="side-bar-tools">
             <h4 id="sidebar_quickguide">Quick Start Guide</h4>
             <h4 id="sidebar_home" onclick="sidebar_home()">Home</h4>
-            <h4 id="sidebar_customer">Customer</h4>
+            <h4 id="sidebar_customer" onclick="sidebar_customer()">Customer</h4>
             <h4 id="sidebar_subs" onclick="sidebar_subs()">Subscriptions</h4>
             <div onclick="invoice()" class="invoice">
                 <h3 id="invoice_Credit">Invoices & Credit Notes</h3>
