--- a/sidebar.html
+++ b/sidebar.html
@@ -18,46 +18,61 @@
         </div>
         <input id="search" type="text" placeholder="Go to">
         <div id="side-bar-tools">
-            <h4 id="sidebar_quickguide">Quick Start Guide</h4>
-            <h4 id="sidebar_home" onclick="sidebar_home()">Home</h4>
-            <h4 id="sidebar_customer" onclick="sidebar_customer()">Customer</h4>
-            <h4 id="sidebar_subs" onclick="sidebar_subs()">Subscriptions</h4>
+            <div class="sidebar_quickguide" onclick="get_started()">
+                <h3>Quick Start Guide</h3>
+            </div>
+            <div class="sidebar_home" onclick="sidebar_home()">
+                <h3>Home</h3>
+            </div>
+            <div class="sidebar_customer" onclick="sidebar_customer()">
+                <h3>Customer</h3>
+            </div>
+            <div class="sidebar_subs" onclick="sidebar_subs()">
+                <h3>Subscriptions</h3>
+            </div>
+
+
             <div onclick="invoice()" class="invoice">
                 <h3 id="invoice_Credit">Invoices & Credit Notes</h3>
-                <button id="invoice_button">+</button>
+                <h3 id="invoice_button">+</h3>
             </div>
             <div id="invoice_empty"></div>
 
             <div onclick="catalog()" class="catalog">
                 <h3 id="prod_catalog">Product Catalog</h3>
-                <button id="prod_button">+</button>
+                <h3 id="prod_button">+</h3>
             </div>
             <div id="prod_empty"></div>
 
             <div onclick="entitle()" class="entitle">
                 <h3 id="entitle">Entitlements</h3>
-                <button id="entitle_button">+</button>
+                <h3 id="entitle_button">+</h3>
             </div>
             <div id="entitle_empty"></div>
 
             <div onclick="logs()" class="logs">
                 <h3 id="logs">Logs</h3>
-                <button id="logs_button">+</button>
+                <h3 id="logs_button">+</h3>
             </div>
             <div id="logs_empty"></div>
 
             <div onclick="rev()" class="rev">
                 <h3 id="rev">RevenueStory</h3>
-                <button id="rev_button">+</button>
+                <h3 id="rev_button">+</h3>
             </div>
             <div id="rev_empty"></div>
-            <h4 id="sidebar_report">Classic Reports</h4>
-            <h4 id="sidebar_app">Apps</h4>
+            <div class="sidebar_report">
+                <h3>Classic Reports</h3>
+            </div>
+            <div class="sidebar_app" onclick="myapp()">
+                <h3>Apps</h3>
+            </div>
+
             <div onclick="set()" class="set">
                 <h3 id="set">Settings</h3>
-                <button id="set_button">+</button>
             </div>
-            <div id="set_empty"></div>
+
+            <button id="log_out">Log out</button>
         </div>
 
 
@@ -106,10 +121,22 @@
                         alt="">
                 </div>
                 <div id="sub-main-3">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                       <h4>Total MRP</h4>
+                       <h2>Rs.84,920</h2>
+                    </div>
+                    <div>
+                       <h4>Total Active Subscriptions</h4>
+                       <h2>1,702</h2>
+                    </div>
+                    <div>
+                       <h4>Net Billing</h4>
+                       <h2>Rs.198,805</h2>
+                    </div>
+                    <div>
+                       <h4>Net Payments</h4>
+                       <h2>Rs.194,800</h2>
+                    </div>
                 </div>
                 <div id="buttons_home">
                     <button id="daily" onclick="daily()">Daily</button>
