--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./Log-Sign-Styles/login.css">
+    <link rel="stylesheet" href="./styles/login.css" />
     <title>User Login - Chargebee</title>
   </head>
   <body>
@@ -16,11 +16,13 @@
             src="https://d2jxbtsa1l6d79.cloudfront.net/static/app-static-assets/core/core-2.1.7/images/brand/cn-logotype-black.svg"
         /></a>
         <div class="rightnav">
-          <p>Don't have an account? <a href="">Sing up 
-           &nbsp; <i class="fa-solid fa-arrow-right"></i></a></p>
+          <p>
+            Don't have an account?
+            <a href="" >Sign up <i class="fa-solid fa-arrow-right"></i
+            ></a>
+          </p>
         </div>
       </div>
-
       <div class="box2">
         <div class="box2_1">
           <img
@@ -29,8 +31,9 @@
           />
           <div>
             <p id="p1">ANNOUNCING SUMMER 2022 PRODUCT RELEASE</p>
-            <p id="p2"><a>Monetize Effectively
-                to Tackle Market Turbulence</a></p>
+            <p id="p2">
+              <a>Monetize Effectively to Tackle Market Turbulence</a>
+            </p>
           </div>
           <div class="img3_1">
             <img
@@ -39,7 +42,10 @@
               align="left"
             />
             <p class="para1">
-                Chargebee's Summer 2022 Release brings you better monetization capabilities that help you seize revenue opportunities by improving customer lifetime value, managing cashflows better, and achieving topline growth.
+              Chargebee's Summer 2022 Release brings you better monetization
+              capabilities that help you seize revenue opportunities by
+              improving customer lifetime value, managing cashflows better, and
+              achieving topline growth.
             </p>
           </div>
           <p class="para2">See what's new across our products -></p>
@@ -62,16 +68,17 @@
                 class="input"
                 placeholder=" password"
               /><br /><br />
-              
-              <input class="signup" type="submit" value="Submit">
+
+              <input class="signup" type="submit" value="Submit" />
               <p class="forpass">Forgot password?</p>
             </form>
             <h2><span>or</span></h2>
             <div>
-                
               <button class="btn">
-                <img id="img6" src="./Log-Sign-Img/g_logo.png" align="left" />
-                <p ><a href><div class="p7">Sign in with Google</div></a></p>
+                <img id="img6" src="./images/g_logo.png" align="left" />
+                <p>
+                  <a href><div class="p7">Sign in with Google</div></a>
+                </p>
               </button>
               <p class="btn2"><a href>Sign in with single sign-On</a></p>
             </div>
@@ -87,5 +94,8 @@
     </div>
   </body>
 </html>
-<script src="https://kit.fontawesome.com/9723985197.js" crossorigin="anonymous"></script>
+<script
+  src="https://kit.fontawesome.com/9723985197.js"
+  crossorigin="anonymous"
+></script>
 //Nirupama
