--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <body>
     <div class="box1">
       <div>
-        <a href
+        <a href="./index.html"
           ><img
             id="img_1"
             src="https://d2jxbtsa1l6d79.cloudfront.net/static/app-static-assets/core/core-2.1.7/images/brand/cn-logotype-black.svg"
