--- a/signup.html
+++ b/signup.html
@@ -35,11 +35,11 @@
       </div>
       <div>
         <div id="sign_head">
-          <div>
-            <img
-              class="logo"
-              src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg"
-            />
+          <div><a href="./index.html"><img
+            class="logo"
+            src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg"
+          /></a>
+            
           </div>
           <div>
             <a href="./login.html"
