complete partner page

--- a/fp03_086_day3.html
+++ b/fp03_086_day3.html
@@ -201,6 +201,46 @@
             border-radius: 4px;
             font-size: larger;
         }
+        #market{
+            height: auto;
+            width: 60%;
+            /* border: 1px solid red; */
+            margin: auto;
+            margin-top: 3rem;
+            text-align: center;
+        }
+        #market>h1{
+            font-size: 39px;
+        }
+        #market>p{
+            line-height: 26px;
+            color: grey;
+        }
+        #market>button{
+            background-color: rgb(52, 102, 240);
+            border: none;
+            color: white;
+            padding: 12px 18px;
+            border-radius: 4px;
+            font-size: larger;
+        }
+        #market_ad{
+            display: flex;
+            height: 150px;
+            width: 100%;
+            /* border: 1px solid red; */
+            margin: auto;
+            margin-top: 3rem;
+        }
+        #market_ad>div{
+            height: 100%;
+            width: 18%;
+            /* border: 1px solid teal; */
+            margin: auto;
+        }
+        #market_ad>div>img{
+            width: 70%;
+        }
     </style>
 </head>
 <body>
@@ -316,5 +356,27 @@
         </div>
     </div>
     <button id="btn">Become A Partner > </button>
+    <div id="market">
+        <h1>Chargebee Marketplace</h1>
+        <p>Visit our Chargebee Marketplace to explore our integrations and to see what makes our subscription marketplace unique. Through our marketplace, we empower our customers and partners to leverage Chargebee as a platform for their continued growth.</p>
+        <button>Visit Our Marketplace > </button>
+    </div>
+    <div id="market_ad">
+        <div>
+            <img src="https://webstatic.chargebee.com/assets/web/543/images/partners/marketplace-logos/logo7.png" alt="">
+        </div>
+        <div>
+            <img src="https://webstatic.chargebee.com/assets/web/543/images/partners/marketplace-logos/logo10.png" alt="">
+        </div>
+        <div>
+            <img src="https://webstatic.chargebee.com/assets/web/543/images/partners/marketplace-logos/logo2.png" alt="">
+        </div>
+        <div>
+            <img src="https://webstatic.chargebee.com/assets/web/543/images/partners/marketplace-logos/logo1.png" alt="">
+        </div>
+        <div>
+            <img src="https://webstatic.chargebee.com/assets/web/543/images/partners/marketplace-logos/logo6.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
