--- a/signup.html
+++ b/signup.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/signup.css" />
-    <title> Sign Up - Get Your Free Sandbox Chargebee</title>
     <link rel="icon" type="image/x-icon" href="https://www.chargebee.com/static/resources/brand/apple-touch-icon.png">
+    <title>Sign UP - Get Your Free Sandbox - Chargebee</title>
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -33,57 +34,66 @@
           </div>
         </div>
       </div>
+
       <div>
         <div id="sign_head">
-          <div><a href="./index.html"><img
-            class="logo"
-            src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg"
-          /></a>
+          <div>
+            <a href="./index.html">
+              <img
+              class="logo"
+              src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg"
+            />
+            </a>
             
           </div>
           <div>
-            <a href="./login.html"
-              >Login <i class="fa-solid fa-arrow-right"></i
-            ></a>
+            <a href="./login.html">Login <i class="fa-solid fa-arrow-right"></i></a>
           </div>
         </div>
-        <div id="div">
-          <form action="/action_page.php">
-            <label id="companyNmae" for="fname">Work email</label>
-            <input
-              type="text"
-              id="email"
-              type="email"
-              placeholder="(eg)john.m@company.com"
-            />
-            <br />
-            <label id="companyNmae" for="lname">Phone number</label>
-            <input
-              type="text"
-              id="phone"
-              type="number"
-              placeholder="81234 56789"
-            />
-            <br /><br />
-            <p>
-              <input type="checkbox" required />I accept the Terms and
-              Conditions
-            </p>
-            <br />
-            <input type="submit" value="Complete Signup " />
-            <br />
-            <p>
-              By clicking on Complete Signup, you agree to our Terms and you
-              acknowledge having read our Privacy Notice
-            </p>
-            <br />
-            <p>
-              *This includes periodic newsletters, emails about usage tips,
-              billing practices, and other communications. You can opt out
-              anytime within the app.
-            </p>
-            <br />
-          </form>
+        <div id="borderstyle">
+          <h1 id="borderstyletetx">Create Your Sandbox Account</h1>
+          <div id="div">
+            <form action="/action_page.php">
+              <label id="companyNmae" for="fname">Work email</label><br /><br />
+              <input
+                type="text"
+                id="email"
+                type="email"
+                placeholder="(eg)john.m@company.com"
+              />
+              <br />
+              <label id="companyNmae" for="lname">Phone number</label
+              ><br /><br />
+              <input
+                type="text"
+                id="phone"
+                type="number"
+                placeholder="81234 56789"
+              />
+              <br /><br />
+              <p id="styelOfocheckbox">
+                <input type="checkbox" required />
+                <label for="c1"
+                  >I want to be notified about the awesome happenings* at
+                  Chargebee</label
+                >
+              </p>
+              <br />
+              <input type="submit" value="Complete Signup " />
+              <br />
+              <p id="para1signa">
+                By clicking on Complete Signup, you agree to our <span id="spancolor">Terms</span> and you
+                acknowledge having read our <span id="spancolor">Privacy Notice</span>
+              </p>
+              <br />
+              <p id="para1signa2">
+                *This includes periodic newsletters, emails about usage tips,
+                billing practices, and other communications. You can opt out
+                anytime within the app.
+              </p>
+              <br />
+            </form>
+          </div>
         </div>
       </div>
     </div>
@@ -135,7 +145,6 @@
     console.log(UserListData);
     userArr.push(UserListData);
     localStorage.setItem("userData", JSON.stringify(userArr));
-    alert("Signup sucessfull!!")
     window.location.href = "login.html";
   });
 </script>
