--- a/Acc_SetUp.html
+++ b/Acc_SetUp.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+         *{
+            font-family: "Segoe UI";
+        }
         body {
             background-color: rgb(250, 250, 252);
         }
@@ -17,6 +20,9 @@
 
         .text {
             margin-left: 50px;
+        }
+        .text>input,.text>p{
+            margin-top: -5px;
         }
 
         #comp_name,
@@ -56,17 +62,16 @@
     <div id="main">
         <div class="text">
             <h1>Complete your account setup</h1>
-            <h3>Choose a domain for your business</h3>
+            <h4>Choose a domain for your business</h4>
             <p>Your domain name is a unique identifier for your Chargebee site.</p>
             <input type="text" id="comp_name" placeholder="example.com" required>
-            <h3>Name</h3>
+            <h4>Name</h4>
             <p>This will be displayed on invites to your Chargebee account, email <br> notifications, etc.</p>
             <input type="text" id="name" placeholder="example" required>
-            <h3>Set password</h3>
+            <h4>Set password</h4>
             <input type="text" id="pass" placeholder="Example@gmail.com" required>
-            <h3>Minimum requirements</h3>
+            <h4>Minimum requirements</h4>
             <li>8 characters long</li>
-            <li>1 letter</li>
             <li>1 special character</li>
             <li id="num">1 number</li>
             <button id="next" onclick="next_page()" style="display: block;margin-top: 20px;">Next</button>
@@ -91,6 +96,8 @@
         }
         if (x.includes(1) || x.includes(2) || x.includes(3) || x.includes(4) || x.includes(5) || x.includes(6) || x.includes(7) || x.includes(8) || x.includes(9) || x.includes(10)) {
             localStorage.setItem("Company Details",JSON.stringify(obj))
+            
+            window.location="personal1.html"
         }else{
             alert("Incorrect Password Type")
         }
