--- a/sidebar.html
+++ b/sidebar.html
@@ -12,7 +12,7 @@
 <body>
     <div id="side-bar">
         <div id="logo-Section">
-            <img id="logo" src="./images/logo.png" alt="">
+            <img id="logo" src="./images/man.png" alt="">
             <div id="details">
             </div>
         </div>
@@ -72,7 +72,7 @@
                 <h3 id="set">Settings</h3>
             </div>
 
-            <button id="log_out">Log out</button>
+            <button id="log_out" onclick="logout()">Log out</button>
         </div>
 
 
@@ -83,7 +83,7 @@
             <div id="main">
                 <div id="sub-main-1">
                     <iframe width="200" height="125" style="margin-left: 20px;"
-                        src="https://www.youtube.com/embed/QCxXJMhQNZQ">
+                        src="https://www.youtube.com/embed/u83QbjCb_JY">
                     </iframe>
                     <div style="margin-left:20px ; ">
                         <h3>What can Chargify do for you?</h3>
@@ -91,21 +91,22 @@
                         recovery, pricing management, and more. Focus on the growth, <br> and we'll handle the rest.
                     </div>
                 </div>
+                
 
                 <div id="sub-main-2">
                     <div style="margin-left:20px ; ">
                         <h3>Explore Chargebee</h3>
                         <div style="display: flex;">
                             <button
-                                style="border-radius: 50px;background-color: rgb(107, 48, 188);margin-right: 5px;border: 0;">.</button>
+                                style="border-radius: 50px;background-color: rgb(107, 48, 188);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
                             <button
-                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border: 0">.</button>
+                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
                             <button
-                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border: 0">.</button>
+                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
                             <button
-                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border: 0">.</button>
+                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
                             <button
-                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border: 0">.</button>
+                                style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
                         </div>
                         <h3>Give it a try!</h3>
                         <p>Welcome to your test site. This is a space for you to play <br> around and get an idea of how
@@ -122,20 +123,24 @@
                 </div>
                 <div id="sub-main-3">
                     <div>
-                       <h4>Total MRP</h4>
-                       <h2>Rs.84,920</h2>
+                        <h4>Total MRP</h4>
+                        <h2>Rs.84,920</h2>
                     </div>
                     <div>
-                       <h4>Total Active Subscriptions</h4>
-                       <h2>1,702</h2>
+                        <h4>Total Active Subscriptions</h4>
+                        <h2>1,702</h2>
                     </div>
                     <div>
-                       <h4>Net Billing</h4>
-                       <h2>Rs.198,805</h2>
+                        <h4>Net Billing</h4>
+                        <h2>Rs.198,805</h2>
                     </div>
                     <div>
-                       <h4>Net Payments</h4>
-                       <h2>Rs.194,800</h2>
+                        <h4>Net Payments</h4>
+                        <h2>Rs.194,800</h2>
+                    </div>
+                    <div>
+                        <h4>Unpaid Invoices</h4>
+                        <h2>Rs.2,340</h2>
                     </div>
                 </div>
                 <div id="buttons_home">
